...
    val isLoginEnabled: LiveData<Boolean> = _isLoginEnabled

    private val _isLoading = MutableLiveData<Boolean>()
    val isLoading: LiveData<Boolean> = _isLoading

    private val _lorem = MutableStateFlow<String>("")
    val lorem: StateFlow<String> = _lorem

    fun onLoginChanged(email: String) {
        _email.value = email
        _isLoginEnabled.value = enableLogin(email, _password.value.orEmpty())
    }

...
